Afgerond - Fase 3 — Shell & navigatie (header/bottom nav contract)

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -93,6 +93,12 @@
   "core.offline.title": "Du bist offline",
   "core.offline.body": "Keine Internetverbindung. Die App funktioniert nur eingeschränkt. Bitte versuche es erneut, sobald du wieder online bist.",
   "core.offline.retry": "Erneut versuchen",
+  "nav.today": "Heute",
+  "nav.train": "Trainieren",
+  "nav.brain": "Gehirn",
+  "nav.progress": "Fortschritt",
+  "nav.more": "Mehr",
+  "nav.comingSoon": "Kommt bald",
   "nav.home": "Start",
   "nav.notifications": "Benachrichtigungen",
   "nav.settings": "Einstellungen",
