--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -93,6 +93,12 @@
   "core.offline.title": "You are offline",
   "core.offline.body": "No internet connection. The app only works in a limited way. Please try again when you are back online.",
   "core.offline.retry": "Try again",
+  "nav.today": "Today",
+  "nav.train": "Train",
+  "nav.brain": "Brain",
+  "nav.progress": "Progress",
+  "nav.more": "More",
+  "nav.comingSoon": "Coming soon",
   "nav.home": "Home",
   "nav.notifications": "Notifications",
   "nav.settings": "Settings",
