Afgerond - Fase 4b Pagina’s batch 1 (core training discovery)

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -103,6 +103,29 @@
   "nav.notifications": "Benachrichtigungen",
   "nav.settings": "Einstellungen",
   "app.footer.navigation": "Hauptnavigation",
+  "trainieren.title": "Trainieren",
+  "trainieren.subtitle": "Finde dein nächstes Training",
+  "trainieren.hub.description": "Wähle ein Modul und erkunde passende Einheiten aus dem Seed-Katalog.",
+  "trainieren.hub.loading": "Trainings werden geladen...",
+  "trainieren.hub.error": "Trainingsdaten konnten nicht geladen werden.",
+  "trainieren.trainingCountLabel": "Trainings",
+  "trainieren.intensity.light": "Leicht",
+  "trainieren.intensity.medium": "Mittel",
+  "trainieren.intensity.heavy": "Intensiv",
+  "trainieren.module.loading": "Modul wird geladen...",
+  "trainieren.module.notFound": "Das Modul wurde nicht gefunden.",
+  "trainieren.module.filtersTitle": "Intensität auswählen",
+  "trainieren.filters.all": "Alle",
+  "trainieren.minutes": "Minuten",
+  "trainieren.trainingList.empty": "Keine Trainings für diese Auswahl gefunden.",
+  "trainieren.detail.loading": "Training wird geladen...",
+  "trainieren.detail.notFound": "Training wurde nicht gefunden.",
+  "trainieren.detail.headerTitle": "Training",
+  "trainieren.detail.durationLabel": "Dauer",
+  "trainieren.detail.availableIntensities": "Verfügbare Intensitäten",
+  "trainieren.detail.intensities": "Intensitäten",
+  "trainieren.detail.actions": "Aktionen",
+  "trainieren.detail.startCta": "Start (kommt in Fase 7)",
   "home.widgets.ariaLabel": "Startseiten-Widgets",
   "modules.dreamdropDemo.title": "Dreamdrop Demo",
   "modules.dreamdropDemo.description": "Erfasse Träume und lasse sie per KI zusammenfassen.",
