--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -103,6 +103,29 @@
   "nav.notifications": "Notifications",
   "nav.settings": "Settings",
   "app.footer.navigation": "Main navigation",
+  "trainieren.title": "Train",
+  "trainieren.subtitle": "Find your next training",
+  "trainieren.hub.description": "Choose a module and explore guided sessions from the seed catalog.",
+  "trainieren.hub.loading": "Loading trainings...",
+  "trainieren.hub.error": "Could not load training data.",
+  "trainieren.trainingCountLabel": "trainings",
+  "trainieren.intensity.light": "Light",
+  "trainieren.intensity.medium": "Medium",
+  "trainieren.intensity.heavy": "Heavy",
+  "trainieren.module.loading": "Loading module...",
+  "trainieren.module.notFound": "The module could not be found.",
+  "trainieren.module.filtersTitle": "Choose an intensity",
+  "trainieren.filters.all": "All",
+  "trainieren.minutes": "minutes",
+  "trainieren.trainingList.empty": "No trainings for this selection.",
+  "trainieren.detail.loading": "Loading training...",
+  "trainieren.detail.notFound": "Training not found.",
+  "trainieren.detail.headerTitle": "Training",
+  "trainieren.detail.durationLabel": "Duration",
+  "trainieren.detail.availableIntensities": "Available intensities",
+  "trainieren.detail.intensities": "Intensities",
+  "trainieren.detail.actions": "Actions",
+  "trainieren.detail.startCta": "Start training (coming soon)",
   "home.widgets.ariaLabel": "Home widgets",
   "modules.dreamdropDemo.title": "Dreamdrop Demo",
   "modules.dreamdropDemo.description": "Capture dreams and let AI summarize them with mood context.",
