--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -125,7 +125,24 @@
   "trainieren.detail.availableIntensities": "Verfügbare Intensitäten",
   "trainieren.detail.intensities": "Intensitäten",
   "trainieren.detail.actions": "Aktionen",
-  "trainieren.detail.startCta": "Start (kommt in Fase 7)",
+  "trainieren.detail.startCta": "Training starten",
+  "trainieren.detail.safety": "Sorge für eine sichere Umgebung",
+  "trainieren.detail.instructions": "Anleitung / So geht’s",
+  "trainieren.detail.backToOverview": "Zurück zur Übersicht",
+  "trainieren.detail.activeLabel": "Aktive Sitzung",
+  "trainieren.detail.stepProgress": "Schritt {{current}}/{{total}}",
+  "trainieren.detail.currentStep": "Aktueller Schritt",
+  "trainieren.detail.pause": "Pause",
+  "trainieren.detail.resume": "Weiter",
+  "trainieren.detail.stop": "Stoppen",
+  "trainieren.detail.decrease": "Dauer verkürzen",
+  "trainieren.detail.increase": "Dauer verlängern",
+  "trainieren.detail.completed": "Geschafft!",
+  "trainieren.detail.completedCta": "Zurück zur Übersicht",
+  "trainieren.detail.confirm.message": "Training wird pausiert oder beendet.",
+  "trainieren.detail.confirm.subtitle": "Möchtest du weitermachen oder die Sitzung beenden?",
+  "trainieren.detail.confirm.continue": "Weitertrainieren",
+  "trainieren.detail.confirm.stop": "Training beenden",
   "home.widgets.ariaLabel": "Startseiten-Widgets",
   "modules.dreamdropDemo.title": "Dreamdrop Demo",
   "modules.dreamdropDemo.description": "Erfasse Träume und lasse sie per KI zusammenfassen.",
