--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -125,7 +125,24 @@
   "trainieren.detail.availableIntensities": "Available intensities",
   "trainieren.detail.intensities": "Intensities",
   "trainieren.detail.actions": "Actions",
-  "trainieren.detail.startCta": "Start training (coming soon)",
+  "trainieren.detail.startCta": "Start training",
+  "trainieren.detail.safety": "Make sure the area is safe",
+  "trainieren.detail.instructions": "How it works",
+  "trainieren.detail.backToOverview": "Back to overview",
+  "trainieren.detail.activeLabel": "Active session",
+  "trainieren.detail.stepProgress": "Step {{current}}/{{total}}",
+  "trainieren.detail.currentStep": "Current step",
+  "trainieren.detail.pause": "Pause",
+  "trainieren.detail.resume": "Resume",
+  "trainieren.detail.stop": "Stop",
+  "trainieren.detail.decrease": "Reduce duration",
+  "trainieren.detail.increase": "Increase duration",
+  "trainieren.detail.completed": "Well done!",
+  "trainieren.detail.completedCta": "Back to overview",
+  "trainieren.detail.confirm.message": "Training will be paused or ended.",
+  "trainieren.detail.confirm.subtitle": "Do you want to continue or end the session?",
+  "trainieren.detail.confirm.continue": "Continue training",
+  "trainieren.detail.confirm.stop": "End training",
   "home.widgets.ariaLabel": "Home widgets",
   "modules.dreamdropDemo.title": "Dreamdrop Demo",
   "modules.dreamdropDemo.description": "Capture dreams and let AI summarize them with mood context.",
