Afgerond compleet - Fase 4 — Pagina’s batch 1 (core training discovery)

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -126,19 +126,20 @@
   "trainieren.detail.intensities": "Intensitäten",
   "trainieren.detail.actions": "Aktionen",
   "trainieren.detail.startCta": "Training starten",
-  "trainieren.detail.safety": "Sorge für eine sichere Umgebung",
-  "trainieren.detail.instructions": "Anleitung / So geht’s",
+  "trainieren.detail.safety": "Achte auf eine sichere Umgebung",
+  "trainieren.detail.instructions": "So funktioniert es",
   "trainieren.detail.backToOverview": "Zurück zur Übersicht",
   "trainieren.detail.activeLabel": "Aktive Sitzung",
-  "trainieren.detail.stepProgress": "Schritt {{current}}/{{total}}",
+  "trainieren.detail.stepPrefix": "Schritt",
   "trainieren.detail.currentStep": "Aktueller Schritt",
   "trainieren.detail.pause": "Pause",
-  "trainieren.detail.resume": "Weiter",
-  "trainieren.detail.stop": "Stoppen",
+  "trainieren.detail.resume": "Fortsetzen",
+  "trainieren.detail.stop": "Beenden",
   "trainieren.detail.decrease": "Dauer verkürzen",
   "trainieren.detail.increase": "Dauer verlängern",
   "trainieren.detail.completed": "Geschafft!",
   "trainieren.detail.completedCta": "Zurück zur Übersicht",
+  "trainieren.detail.infoLabel": "Informationen anzeigen",
   "trainieren.detail.confirm.message": "Training wird pausiert oder beendet.",
   "trainieren.detail.confirm.subtitle": "Möchtest du weitermachen oder die Sitzung beenden?",
   "trainieren.detail.confirm.continue": "Weitertrainieren",
