--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -108,41 +108,42 @@
   "trainieren.hub.description": "Choose a module and explore guided sessions from the seed catalog.",
   "trainieren.hub.loading": "Loading trainings...",
   "trainieren.hub.error": "Could not load training data.",
-  "trainieren.trainingCountLabel": "trainings",
-  "trainieren.intensity.light": "Light",
-  "trainieren.intensity.medium": "Medium",
-  "trainieren.intensity.heavy": "Heavy",
+  "trainieren.trainingCountLabel": "Trainings",
+  "trainieren.intensity.light": "Leicht",
+  "trainieren.intensity.medium": "Mittel",
+  "trainieren.intensity.heavy": "Intensiv",
   "trainieren.module.loading": "Loading module...",
   "trainieren.module.notFound": "The module could not be found.",
   "trainieren.module.filtersTitle": "Choose an intensity",
   "trainieren.filters.all": "All",
-  "trainieren.minutes": "minutes",
-  "trainieren.trainingList.empty": "No trainings for this selection.",
-  "trainieren.detail.loading": "Loading training...",
-  "trainieren.detail.notFound": "Training not found.",
+  "trainieren.minutes": "Minuten",
+  "trainieren.trainingList.empty": "Keine passenden Trainings gefunden.",
+  "trainieren.detail.loading": "Training wird geladen...",
+  "trainieren.detail.notFound": "Training wurde nicht gefunden.",
   "trainieren.detail.headerTitle": "Training",
-  "trainieren.detail.durationLabel": "Duration",
-  "trainieren.detail.availableIntensities": "Available intensities",
-  "trainieren.detail.intensities": "Intensities",
-  "trainieren.detail.actions": "Actions",
-  "trainieren.detail.startCta": "Start training",
-  "trainieren.detail.safety": "Make sure the area is safe",
-  "trainieren.detail.instructions": "How it works",
-  "trainieren.detail.backToOverview": "Back to overview",
-  "trainieren.detail.activeLabel": "Active session",
-  "trainieren.detail.stepProgress": "Step {{current}}/{{total}}",
-  "trainieren.detail.currentStep": "Current step",
+  "trainieren.detail.durationLabel": "Dauer",
+  "trainieren.detail.availableIntensities": "Verfügbare Intensitäten",
+  "trainieren.detail.intensities": "Intensitäten",
+  "trainieren.detail.actions": "Aktionen",
+  "trainieren.detail.startCta": "Training starten",
+  "trainieren.detail.safety": "Achte auf eine sichere Umgebung",
+  "trainieren.detail.instructions": "So funktioniert es",
+  "trainieren.detail.backToOverview": "Zurück zur Übersicht",
+  "trainieren.detail.activeLabel": "Aktive Sitzung",
+  "trainieren.detail.stepPrefix": "Schritt",
+  "trainieren.detail.currentStep": "Aktueller Schritt",
   "trainieren.detail.pause": "Pause",
-  "trainieren.detail.resume": "Resume",
-  "trainieren.detail.stop": "Stop",
-  "trainieren.detail.decrease": "Reduce duration",
-  "trainieren.detail.increase": "Increase duration",
-  "trainieren.detail.completed": "Well done!",
-  "trainieren.detail.completedCta": "Back to overview",
-  "trainieren.detail.confirm.message": "Training will be paused or ended.",
-  "trainieren.detail.confirm.subtitle": "Do you want to continue or end the session?",
-  "trainieren.detail.confirm.continue": "Continue training",
-  "trainieren.detail.confirm.stop": "End training",
+  "trainieren.detail.resume": "Fortsetzen",
+  "trainieren.detail.stop": "Beenden",
+  "trainieren.detail.decrease": "Dauer verkürzen",
+  "trainieren.detail.increase": "Dauer verlängern",
+  "trainieren.detail.completed": "Geschafft!",
+  "trainieren.detail.completedCta": "Zurück zur Übersicht",
+  "trainieren.detail.confirm.message": "Training wird pausiert oder beendet.",
+  "trainieren.detail.confirm.subtitle": "Möchtest du weitermachen oder die Sitzung beenden?",
+  "trainieren.detail.confirm.continue": "Weitertrainieren",
+  "trainieren.detail.confirm.stop": "Training beenden",
+  "trainieren.detail.infoLabel": "Informationen anzeigen",
   "home.widgets.ariaLabel": "Home widgets",
   "modules.dreamdropDemo.title": "Dreamdrop Demo",
   "modules.dreamdropDemo.description": "Capture dreams and let AI summarize them with mood context.",
