Afgerond Fase 4 - All the last details ready now!

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,13 +1,27 @@
 {
-  "app.title": "PWA Skeleton",
+  "app.title": "Fit4Seniors",
   "app.header.notifications": "Benachrichtigungen",
   "app.header.settings": "Einstellungen",
   "app.header.moreActions": "Weitere Aktionen",
   "app.header.closeMenu": "Menü schließen",
-  "home.title": "Startseite",
-  "home.description": "Dies ist der Standard-Startbildschirm der PWA Skeleton v1.",
-  "home.goToNotifications": "Zu den Benachrichtigungen",
-  "home.goToSettings": "Zu den Einstellungen",
+  "home.title": "Fit4Seniors",
+  "home.description": "Startseite von Fit4Seniors.",
+  "home.greeting": "Guten Morgen, Jan",
+  "home.subtext": "Bereit, heute aktiv zu bleiben?",
+  "home.hero.title": "Training starten",
+  "home.hero.subtitle": "Tägliche Routine • 20 Min",
+  "home.hero.imageAlt": "Senioren beim Training",
+  "home.widgets.brainTraining.title": "Gehirntraining",
+  "home.widgets.brainTraining.subtitle": "Gedächtnis & Fokus",
+  "home.widgets.cardio.title": "Cardio",
+  "home.widgets.cardio.subtitle": "Herzgesundheit",
+  "home.widgets.muscle.title": "Muskelaufbau",
+  "home.widgets.muscle.subtitle": "Kraft & Tonus",
+  "home.widgets.balance.title": "Balance & Flexibilität",
+  "home.widgets.balance.subtitle": "Stabilität",
+  "home.widgets.recent.heading": "Zuletzt trainiert",
+  "home.widgets.recent.title": "Morgenrunde",
+  "home.widgets.recent.subtitle": "Gestern • 35 Min",
   "home.header.menu.demoPanel": "Demo-Panel öffnen",
   "home.header.menu.customAction": "Custom-Aktion ausführen",
   "notifications.title": "Benachrichtigungen",
@@ -27,7 +41,7 @@
   "settings.theme.system": "System",
   "settings.theme.light": "Hell",
   "settings.theme.dark": "Dunkel",
-  "settings.theme.active": "Aktives Theme: {{value}}",
+  "settings.theme.active": "Aktives Theme",
   "settings.language.title": "Sprache",
   "settings.language.description": "Wähle die Sprache der App.",
   "settings.language.system": "Systemsprache",
@@ -109,12 +123,17 @@
   "trainieren.hub.loading": "Trainings werden geladen...",
   "trainieren.hub.error": "Trainingsdaten konnten nicht geladen werden.",
   "trainieren.trainingCountLabel": "Trainings",
-  "trainieren.intensity.light": "Leicht",
-  "trainieren.intensity.medium": "Mittel",
-  "trainieren.intensity.heavy": "Intensiv",
+  "trainieren.module.categoryLabel": "Kategorie",
+  "trainieren.module.filterCta": "Filter",
   "trainieren.module.loading": "Modul wird geladen...",
   "trainieren.module.notFound": "Das Modul wurde nicht gefunden.",
   "trainieren.module.filtersTitle": "Intensität auswählen",
+  "trainieren.filters.title": "Filter",
+  "trainieren.filters.intensityLabel": "Wie intensiv",
+  "trainieren.filters.durationLabel": "Wie lang",
+  "trainieren.filters.durationUnit": "min",
+  "trainieren.filters.apply": "Anwenden",
+  "trainieren.filters.reset": "Zurücksetzen",
   "trainieren.filters.all": "Alle",
   "trainieren.minutes": "Minuten",
   "trainieren.trainingList.empty": "Keine Trainings für diese Auswahl gefunden.",
@@ -140,6 +159,31 @@
   "trainieren.detail.completed": "Geschafft!",
   "trainieren.detail.completedCta": "Zurück zur Übersicht",
   "trainieren.detail.infoLabel": "Informationen anzeigen",
+  "training.intensity.light": "Leicht",
+  "training.intensity.medium": "Mittel",
+  "training.intensity.intense": "Intensiv",
+  "training.completionMessages.1": "Stark gemacht! Weiter so.",
+  "training.completionMessages.2": "Tolle Leistung – behalte den Flow bei.",
+  "training.completionMessages.3": "Du hast das Training souverän abgeschlossen.",
+  "training.completionMessages.4": "Super Tempo, bleib dran!",
+  "training.completionMessages.5": "Das war eine Runde für die Gesundheit.",
+  "training.completionMessages.6": "Klasse Einsatz, Schritt für Schritt.",
+  "training.completionMessages.7": "Energie geladen und bereit für den Tag.",
+  "training.completionMessages.8": "Sauber geschafft – atme tief durch.",
+  "training.completionMessages.9": "Bewegung abgeschlossen, Körper dankt es dir.",
+  "training.completionMessages.10": "Prima! Das war ein sicherer Abschluss.",
+  "training.steps.light.1": "Sanft aufwärmen und Balance finden.",
+  "training.steps.light.2": "In ruhigem Tempo weitergehen.",
+  "training.steps.light.3": "Atme gleichmäßig und bleibe locker.",
+  "training.steps.light.4": "Langsam ausklingen lassen.",
+  "training.steps.medium.1": "Starte in lockerem Tempo und richte dich auf.",
+  "training.steps.medium.2": "Finde einen gleichmäßigen Rhythmus.",
+  "training.steps.medium.3": "Atme tief, halte die Schultern entspannt.",
+  "training.steps.medium.4": "Schließe mit ruhigeren Schritten ab.",
+  "training.steps.intense.1": "Kurzes Aufwärmen mit kleinen Bewegungen.",
+  "training.steps.intense.2": "Tempo schrittweise steigern.",
+  "training.steps.intense.3": "Arme aktiv mitnehmen und stabil bleiben.",
+  "training.steps.intense.4": "Zum Ende das Tempo langsam senken.",
   "trainieren.detail.confirm.message": "Training wird pausiert oder beendet.",
   "trainieren.detail.confirm.subtitle": "Möchtest du weitermachen oder die Sitzung beenden?",
   "trainieren.detail.confirm.continue": "Weitertrainieren",
