--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,13 +1,27 @@
 {
-  "app.title": "PWA Skeleton",
+  "app.title": "Fit4Seniors",
   "app.header.notifications": "Notifications",
   "app.header.settings": "Settings",
   "app.header.moreActions": "More actions",
   "app.header.closeMenu": "Close menu",
-  "home.title": "Home",
-  "home.description": "This is the default home screen of PWA Skeleton v1.",
-  "home.goToNotifications": "Go to notifications",
-  "home.goToSettings": "Go to settings",
+  "home.title": "Fit4Seniors",
+  "home.description": "Fit4Seniors start screen.",
+  "home.greeting": "Good morning, Jan",
+  "home.subtext": "Ready to stay active today?",
+  "home.hero.title": "Start exercise",
+  "home.hero.subtitle": "Daily routine • 20 min",
+  "home.hero.imageAlt": "Seniors exercising",
+  "home.widgets.brainTraining.title": "Brain Training",
+  "home.widgets.brainTraining.subtitle": "Memory & Focus",
+  "home.widgets.cardio.title": "Cardio",
+  "home.widgets.cardio.subtitle": "Heart health",
+  "home.widgets.muscle.title": "Muscle maintenance",
+  "home.widgets.muscle.subtitle": "Strength & Tone",
+  "home.widgets.balance.title": "Balance & Flex",
+  "home.widgets.balance.subtitle": "Stability",
+  "home.widgets.recent.heading": "Last Trained",
+  "home.widgets.recent.title": "Morning Walk",
+  "home.widgets.recent.subtitle": "Yesterday • 35 min",
   "home.header.menu.demoPanel": "Open demo panel",
   "home.header.menu.customAction": "Run custom action",
   "notifications.title": "Notifications",
@@ -27,7 +41,7 @@
   "settings.theme.system": "System",
   "settings.theme.light": "Light",
   "settings.theme.dark": "Dark",
-  "settings.theme.active": "Active theme: {{value}}",
+  "settings.theme.active": "Active theme",
   "settings.language.title": "Language",
   "settings.language.description": "Choose the app language.",
   "settings.language.system": "System language",
@@ -109,41 +123,72 @@
   "trainieren.hub.loading": "Loading trainings...",
   "trainieren.hub.error": "Could not load training data.",
   "trainieren.trainingCountLabel": "Trainings",
-  "trainieren.intensity.light": "Leicht",
-  "trainieren.intensity.medium": "Mittel",
-  "trainieren.intensity.heavy": "Intensiv",
+  "trainieren.module.categoryLabel": "Category",
+  "trainieren.module.filterCta": "Filter",
   "trainieren.module.loading": "Loading module...",
   "trainieren.module.notFound": "The module could not be found.",
   "trainieren.module.filtersTitle": "Choose an intensity",
+  "trainieren.filters.title": "Filters",
+  "trainieren.filters.intensityLabel": "How intense",
+  "trainieren.filters.durationLabel": "How long",
+  "trainieren.filters.durationUnit": "min",
+  "trainieren.filters.apply": "Apply",
+  "trainieren.filters.reset": "Reset",
   "trainieren.filters.all": "All",
-  "trainieren.minutes": "Minuten",
-  "trainieren.trainingList.empty": "Keine passenden Trainings gefunden.",
-  "trainieren.detail.loading": "Training wird geladen...",
-  "trainieren.detail.notFound": "Training wurde nicht gefunden.",
+  "trainieren.minutes": "Minutes",
+  "trainieren.trainingList.empty": "No trainings found for this selection.",
+  "trainieren.detail.loading": "Loading training...",
+  "trainieren.detail.notFound": "Training could not be found.",
   "trainieren.detail.headerTitle": "Training",
-  "trainieren.detail.durationLabel": "Dauer",
-  "trainieren.detail.availableIntensities": "Verfügbare Intensitäten",
-  "trainieren.detail.intensities": "Intensitäten",
-  "trainieren.detail.actions": "Aktionen",
-  "trainieren.detail.startCta": "Training starten",
-  "trainieren.detail.safety": "Achte auf eine sichere Umgebung",
-  "trainieren.detail.instructions": "So funktioniert es",
-  "trainieren.detail.backToOverview": "Zurück zur Übersicht",
-  "trainieren.detail.activeLabel": "Aktive Sitzung",
-  "trainieren.detail.stepPrefix": "Schritt",
-  "trainieren.detail.currentStep": "Aktueller Schritt",
+  "trainieren.detail.durationLabel": "Duration",
+  "trainieren.detail.availableIntensities": "Available intensities",
+  "trainieren.detail.intensities": "Intensities",
+  "trainieren.detail.actions": "Actions",
+  "trainieren.detail.startCta": "Start training",
+  "trainieren.detail.safety": "Make sure your environment is safe",
+  "trainieren.detail.instructions": "How it works",
+  "trainieren.detail.backToOverview": "Back to overview",
+  "trainieren.detail.activeLabel": "Active session",
+  "trainieren.detail.stepPrefix": "Step",
+  "trainieren.detail.currentStep": "Current step",
   "trainieren.detail.pause": "Pause",
-  "trainieren.detail.resume": "Fortsetzen",
-  "trainieren.detail.stop": "Beenden",
-  "trainieren.detail.decrease": "Dauer verkürzen",
-  "trainieren.detail.increase": "Dauer verlängern",
-  "trainieren.detail.completed": "Geschafft!",
-  "trainieren.detail.completedCta": "Zurück zur Übersicht",
-  "trainieren.detail.confirm.message": "Training wird pausiert oder beendet.",
-  "trainieren.detail.confirm.subtitle": "Möchtest du weitermachen oder die Sitzung beenden?",
-  "trainieren.detail.confirm.continue": "Weitertrainieren",
-  "trainieren.detail.confirm.stop": "Training beenden",
-  "trainieren.detail.infoLabel": "Informationen anzeigen",
+  "trainieren.detail.resume": "Resume",
+  "trainieren.detail.stop": "Stop",
+  "trainieren.detail.decrease": "Shorten duration",
+  "trainieren.detail.increase": "Extend duration",
+  "trainieren.detail.completed": "Well done!",
+  "trainieren.detail.completedCta": "Back to overview",
+  "trainieren.detail.confirm.message": "Training will be paused or stopped.",
+  "trainieren.detail.confirm.subtitle": "Do you want to continue or end the session?",
+  "trainieren.detail.confirm.continue": "Continue training",
+  "trainieren.detail.confirm.stop": "End training",
+  "trainieren.detail.infoLabel": "Show information",
+  "training.intensity.light": "Light",
+  "training.intensity.medium": "Medium",
+  "training.intensity.intense": "Intense",
+  "training.completionMessages.1": "Great job! Keep it up.",
+  "training.completionMessages.2": "Nice work—stay in the flow.",
+  "training.completionMessages.3": "You finished the session confidently.",
+  "training.completionMessages.4": "Strong pace, keep going!",
+  "training.completionMessages.5": "Another round for your health.",
+  "training.completionMessages.6": "Excellent effort, step by step.",
+  "training.completionMessages.7": "Energized and ready for the day.",
+  "training.completionMessages.8": "Well done—take a deep breath.",
+  "training.completionMessages.9": "Session complete—your body thanks you.",
+  "training.completionMessages.10": "Nice! That was a safe finish.",
+  "training.steps.light.1": "Warm up gently and find your balance.",
+  "training.steps.light.2": "Continue at a calm pace.",
+  "training.steps.light.3": "Breathe evenly and stay relaxed.",
+  "training.steps.light.4": "Wind down slowly.",
+  "training.steps.medium.1": "Start at an easy pace and stand tall.",
+  "training.steps.medium.2": "Find a steady rhythm.",
+  "training.steps.medium.3": "Breathe deeply, keep shoulders relaxed.",
+  "training.steps.medium.4": "Finish with calmer steps.",
+  "training.steps.intense.1": "Short warm-up with small movements.",
+  "training.steps.intense.2": "Gradually pick up the pace.",
+  "training.steps.intense.3": "Engage your arms and stay stable.",
+  "training.steps.intense.4": "Slow the pace toward the end.",
+  "home.widgets.ariaLabel": "Home widgets",
   "home.widgets.ariaLabel": "Home widgets",
   "modules.dreamdropDemo.title": "Dreamdrop Demo",
   "modules.dreamdropDemo.description": "Capture dreams and let AI summarize them with mood context.",
