Afgerond - Fase 5 - Training Info RightPanel (cross-cutting, maar module-owned)

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -117,6 +117,17 @@
   "nav.notifications": "Benachrichtigungen",
   "nav.settings": "Einstellungen",
   "app.footer.navigation": "Hauptnavigation",
+  "trainingInfo.title": "Trainingsinfo",
+  "trainingInfo.panel.title": "Trainingsinformationen",
+  "trainingInfo.panel.section.about": "Über dieses Training",
+  "trainingInfo.panel.section.how": "So funktioniert es",
+  "trainingInfo.panel.section.intensity": "Intensität",
+  "trainingInfo.panel.section.duration": "Dauer",
+  "trainingInfo.panel.section.pace": "Tempo-Hinweis",
+  "trainingInfo.panel.section.media": "Medien",
+  "trainingInfo.panel.close": "Panel schließen",
+  "trainingInfo.panel.loading": "Trainingsinfos werden geladen...",
+  "trainingInfo.panel.notFound": "Trainingsinformationen nicht verfügbar.",
   "trainieren.title": "Trainieren",
   "trainieren.subtitle": "Finde dein nächstes Training",
   "trainieren.hub.description": "Wähle ein Modul und erkunde passende Einheiten aus dem Seed-Katalog.",
