--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -117,6 +117,17 @@
   "nav.notifications": "Notifications",
   "nav.settings": "Settings",
   "app.footer.navigation": "Main navigation",
+  "trainingInfo.title": "Training Info",
+  "trainingInfo.panel.title": "Training information",
+  "trainingInfo.panel.section.about": "About this training",
+  "trainingInfo.panel.section.how": "How it works",
+  "trainingInfo.panel.section.intensity": "Intensity",
+  "trainingInfo.panel.section.duration": "Duration",
+  "trainingInfo.panel.section.pace": "Pace cue",
+  "trainingInfo.panel.section.media": "Media",
+  "trainingInfo.panel.close": "Close panel",
+  "trainingInfo.panel.loading": "Loading training info...",
+  "trainingInfo.panel.notFound": "Training information not available.",
   "trainieren.title": "Train",
   "trainieren.subtitle": "Find your next training",
   "trainieren.hub.description": "Choose a module and explore guided sessions from the seed catalog.",
