Afgerond - Fase 6 — Completion Flow (altijd positieve feedback)

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -170,6 +170,16 @@
   "trainieren.detail.completed": "Geschafft!",
   "trainieren.detail.completedCta": "Zurück zur Übersicht",
   "trainieren.detail.infoLabel": "Informationen anzeigen",
+  "completion.title": "Gut gemacht!",
+  "completion.subtitle": "Jede Bewegung zählt – du machst das super.",
+  "completion.cardTitle": "Training abgeschlossen",
+  "completion.body": "Du hast deine Einheit sicher beendet. Dein Körper und Geist danken es dir.",
+  "completion.stats.minutesLabel": "Minuten",
+  "completion.stats.minutesValue": "20",
+  "completion.stats.pointsLabel": "Punkte",
+  "completion.stats.pointsValue": "+120",
+  "completion.ctaBack": "Zurück zur Übersicht",
+  "completion.ctaProgress": "Fortschritt ansehen",
   "training.intensity.light": "Leicht",
   "training.intensity.medium": "Mittel",
   "training.intensity.intense": "Intensiv",
