--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -174,6 +174,16 @@
   "trainieren.detail.confirm.continue": "Continue training",
   "trainieren.detail.confirm.stop": "End training",
   "trainieren.detail.infoLabel": "Show information",
+  "completion.title": "Great job!",
+  "completion.subtitle": "Every move counts — you're doing great.",
+  "completion.cardTitle": "Training completed",
+  "completion.body": "You finished your session safely. Your body and mind thank you.",
+  "completion.stats.minutesLabel": "Minutes",
+  "completion.stats.minutesValue": "20",
+  "completion.stats.pointsLabel": "Points",
+  "completion.stats.pointsValue": "+120",
+  "completion.ctaBack": "Back to overview",
+  "completion.ctaProgress": "View progress",
   "training.intensity.light": "Light",
   "training.intensity.medium": "Medium",
   "training.intensity.intense": "Intense",
