afgerond - Fase 7 — Voortgang & Geschiedenis

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -172,7 +172,7 @@
   "trainieren.detail.infoLabel": "Informationen anzeigen",
   "completion.title": "Gut gemacht!",
   "completion.subtitle": "Jede Bewegung zählt – du machst das super.",
-  "completion.cardTitle": "Training abgeschlossen",
+  "completion.cardTitle": "Training abgeschlossen!",
   "completion.body": "Du hast deine Einheit sicher beendet. Dein Körper und Geist danken es dir.",
   "completion.stats.minutesLabel": "Minuten",
   "completion.stats.minutesValue": "20",
@@ -210,6 +210,50 @@
   "trainieren.detail.confirm.continue": "Weitertrainieren",
   "trainieren.detail.confirm.stop": "Training beenden",
   "home.widgets.ariaLabel": "Startseiten-Widgets",
+  "progress.title": "Fortschritt",
+  "progress.subtitle": "Gut gemacht, du bleibst dran.",
+  "progress.kpi.activeDays": "Aktivität dieser Woche",
+  "progress.activeDaysLabel": "Aktive Tage",
+  "progress.dayActive": "Aktiver Tag",
+  "progress.dayInactive": "Inaktiver Tag",
+  "progress.kpi.totalTrainings": "Abgeschlossene Einheiten",
+  "progress.kpi.weekDelta": "Einheiten diese Woche",
+  "progress.kpi.totalMinutes": "Aktive Minuten",
+  "progress.kpi.target": "Ziel: 300",
+  "progress.highlight.title": "Starker Start!",
+  "progress.highlight.body": "Du hast dein Ziel diese Woche erreicht. Weiter so.",
+  "progress.section.recent": "Letzte Einheiten",
+  "progress.cta.viewHistory": "Verlauf ansehen",
+  "progress.history.title": "Geschichte",
+  "progress.history.subtitle": "Abgeschlossene Einheiten",
+  "progress.history.empty": "Noch keine abgeschlossenen Einheiten.",
+  "progress.history.durationPlanned": "Geplant",
+  "progress.history.durationActual": "Tatsächlich",
+  "progress.history.footer": "Bleib in Bewegung – jeder Schritt zählt",
+  "progress.history.detail.title": "Sitzungsdetails",
+  "progress.history.detail.notFound": "Sitzung nicht gefunden.",
+  "progress.history.detail.fields.durationPlanned": "Geplante Dauer",
+  "progress.history.detail.fields.durationActual": "Tatsächliche Dauer",
+  "progress.history.detail.fields.intensity": "Intensität",
+  "progress.history.detail.fields.paceCue": "Takt-Hinweis",
+  "progress.history.detail.fields.steps": "Schritte",
+  "progress.history.detail.fields.category": "Kategorie",
+  "progress.history.detail.fields.date": "Datum",
+  "progress.history.detail.fields.startTime": "Startzeit",
+  "progress.history.detail.fields.calories": "Kalorien",
+  "progress.history.detail.heroTitle": "Gut gemacht, Jan!",
+  "progress.history.detail.heroSubtitle": "Deine Sitzung ist gespeichert.",
+  "progress.history.detail.status": "Abgeschlossen",
+  "progress.history.detail.mood.title": "Wie fühlte sich diese Übung an?",
+  "progress.history.detail.mood.poor": "Nicht gut",
+  "progress.history.detail.mood.ok": "Okay",
+  "progress.history.detail.mood.good": "Gut",
+  "progress.history.detail.mood.great": "Super",
+  "progress.history.detail.share": "Leistung teilen",
+  "progress.history.detail.shareToast": "Bald verfügbar",
+  "progress.history.detail.fields.durationActualShort": "Zeit",
+  "progress.history.status.done": "Abgeschlossen",
+  "progress.history.subtitleCount": "Abgeschlossene Einheiten ({{count}})",
   "modules.dreamdropDemo.title": "Dreamdrop Demo",
   "modules.dreamdropDemo.description": "Erfasse Träume und lasse sie per KI zusammenfassen.",
   "modules.dreamdropDemo.form.titleLabel": "Titel",
