--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -176,7 +176,7 @@
   "trainieren.detail.infoLabel": "Show information",
   "completion.title": "Great job!",
   "completion.subtitle": "Every move counts — you're doing great.",
-  "completion.cardTitle": "Training completed",
+  "completion.cardTitle": "Training completed!",
   "completion.body": "You finished your session safely. Your body and mind thank you.",
   "completion.stats.minutesLabel": "Minutes",
   "completion.stats.minutesValue": "20",
@@ -211,6 +211,50 @@
   "training.steps.intense.4": "Slow the pace toward the end.",
   "home.widgets.ariaLabel": "Home widgets",
   "home.widgets.ariaLabel": "Home widgets",
+  "progress.title": "Progress",
+  "progress.subtitle": "Great job, you're staying consistent.",
+  "progress.kpi.activeDays": "Activity this week",
+  "progress.activeDaysLabel": "Active days",
+  "progress.dayActive": "Active day",
+  "progress.dayInactive": "Inactive day",
+  "progress.kpi.totalTrainings": "Total sessions",
+  "progress.kpi.weekDelta": "sessions this week",
+  "progress.kpi.totalMinutes": "Active minutes",
+  "progress.kpi.target": "Target: 300",
+  "progress.highlight.title": "Great start!",
+  "progress.highlight.body": "You hit your goal this week. Keep the streak going.",
+  "progress.section.recent": "Recent sessions",
+  "progress.cta.viewHistory": "View history",
+  "progress.history.title": "History",
+  "progress.history.subtitle": "Completed sessions",
+  "progress.history.empty": "No completed sessions yet.",
+  "progress.history.durationPlanned": "Planned",
+  "progress.history.durationActual": "Actual",
+  "progress.history.footer": "Keep moving — every step counts",
+  "progress.history.detail.title": "Session detail",
+  "progress.history.detail.notFound": "Session not found.",
+  "progress.history.detail.fields.durationPlanned": "Planned duration",
+  "progress.history.detail.fields.durationActual": "Actual duration",
+  "progress.history.detail.fields.intensity": "Intensity",
+  "progress.history.detail.fields.paceCue": "Pace cue",
+  "progress.history.detail.fields.steps": "Steps",
+  "progress.history.detail.fields.category": "Category",
+  "progress.history.detail.fields.date": "Date",
+  "progress.history.detail.fields.startTime": "Start time",
+  "progress.history.detail.fields.calories": "Calories",
+  "progress.history.detail.heroTitle": "Great job, Jan!",
+  "progress.history.detail.heroSubtitle": "Your session has been saved.",
+  "progress.history.detail.status": "Completed",
+  "progress.history.detail.mood.title": "How did this exercise feel?",
+  "progress.history.detail.mood.poor": "Not good",
+  "progress.history.detail.mood.ok": "Okay",
+  "progress.history.detail.mood.good": "Good",
+  "progress.history.detail.mood.great": "Great",
+  "progress.history.detail.share": "Share achievement",
+  "progress.history.detail.shareToast": "Coming soon",
+  "progress.history.detail.fields.durationActualShort": "Time",
+  "progress.history.status.done": "Completed",
+  "progress.history.subtitleCount": "Completed sessions ({{count}})",
   "modules.dreamdropDemo.title": "Dreamdrop Demo",
   "modules.dreamdropDemo.description": "Capture dreams and let AI summarize them with mood context.",
   "modules.dreamdropDemo.form.titleLabel": "Title",
