Afgerond - Fase 8 — Breintraining (Dedicated Sessions)

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -116,6 +116,22 @@
   "nav.home": "Start",
   "nav.notifications": "Benachrichtigungen",
   "nav.settings": "Einstellungen",
+  "brain.title": "Gehirntraining",
+  "brain.header.title": "Gehirntraining",
+  "brain.overview.title": "Fokussierte Übungen",
+  "brain.overview.card.wordpuzzle.title": "Wortpuzzle",
+  "brain.overview.card.wordpuzzle.subtitle": "Stärke Gedächtnis und Fokus",
+  "brain.overview.start": "Sitzung starten",
+  "brain.session.headerTitle": "Wortpuzzle",
+  "brain.session.section.focusLabel": "Kognitive Fokussierung",
+  "brain.session.levelLabel": "Niveau: ",
+  "brain.session.level.medium": "Mittel",
+  "brain.session.targetLabel": "Zielwort",
+  "brain.session.controls.pause": "Pause / Fortsetzen",
+  "brain.session.controls.stop": "Stoppen",
+  "brain.session.controls.reset": "Zurücksetzen",
+  "brain.session.success": "Erfolg!",
+  "brain.session.finish": "Beenden",
   "app.footer.navigation": "Hauptnavigation",
   "trainingInfo.title": "Trainingsinfo",
   "trainingInfo.panel.title": "Trainingsinformationen",
@@ -180,6 +196,14 @@
   "completion.stats.pointsValue": "+120",
   "completion.ctaBack": "Zurück zur Übersicht",
   "completion.ctaProgress": "Fortschritt ansehen",
+  "completion.brain.title": "Starker Fokus!",
+  "completion.brain.subtitle": "Hirntraining abgeschlossen – bleib mental aktiv.",
+  "completion.brain.stat.time": "Zeit",
+  "completion.brain.stat.unit": "Übung",
+  "completion.brain.stat.result": "Ergebnis",
+  "completion.brain.result.foundWord": "Wort gefunden: {{word}}",
+  "common.backToOverview": "Zurück zur Übersicht",
+  "common.viewProgress": "Fortschritt ansehen",
   "training.intensity.light": "Leicht",
   "training.intensity.medium": "Mittel",
   "training.intensity.intense": "Intensiv",
@@ -220,6 +244,8 @@
   "progress.kpi.weekDelta": "Einheiten diese Woche",
   "progress.kpi.totalMinutes": "Aktive Minuten",
   "progress.kpi.target": "Ziel: 300",
+  "progress.brain.title": "Gehirntraining",
+  "progress.brain.weeklyCount": "Einheiten diese Woche: {{count}}",
   "progress.highlight.title": "Starker Start!",
   "progress.highlight.body": "Du hast dein Ziel diese Woche erreicht. Weiter so.",
   "progress.section.recent": "Letzte Einheiten",
