--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -116,6 +116,22 @@
   "nav.home": "Home",
   "nav.notifications": "Notifications",
   "nav.settings": "Settings",
+  "brain.title": "Brain training",
+  "brain.header.title": "Brain training",
+  "brain.overview.title": "Dedicated sessions",
+  "brain.overview.card.wordpuzzle.title": "Word puzzle",
+  "brain.overview.card.wordpuzzle.subtitle": "Sharpen memory with quick puzzles",
+  "brain.overview.start": "Start session",
+  "brain.session.headerTitle": "Word puzzle",
+  "brain.session.section.focusLabel": "Cognitive focus",
+  "brain.session.levelLabel": "Level: ",
+  "brain.session.level.medium": "Medium",
+  "brain.session.targetLabel": "Target word",
+  "brain.session.controls.pause": "Pause / Resume",
+  "brain.session.controls.stop": "Stop",
+  "brain.session.controls.reset": "Reset",
+  "brain.session.success": "Success!",
+  "brain.session.finish": "Finish",
   "app.footer.navigation": "Main navigation",
   "trainingInfo.title": "Training Info",
   "trainingInfo.panel.title": "Training information",
@@ -184,6 +200,14 @@
   "completion.stats.pointsValue": "+120",
   "completion.ctaBack": "Back to overview",
   "completion.ctaProgress": "View progress",
+  "completion.brain.title": "Great focus!",
+  "completion.brain.subtitle": "Brain session complete — keep your mind active.",
+  "completion.brain.stat.time": "Time",
+  "completion.brain.stat.unit": "Exercise",
+  "completion.brain.stat.result": "Result",
+  "completion.brain.result.foundWord": "Word found: {{word}}",
+  "common.backToOverview": "Back to overview",
+  "common.viewProgress": "View progress",
   "training.intensity.light": "Light",
   "training.intensity.medium": "Medium",
   "training.intensity.intense": "Intense",
@@ -221,6 +245,8 @@
   "progress.kpi.weekDelta": "sessions this week",
   "progress.kpi.totalMinutes": "Active minutes",
   "progress.kpi.target": "Target: 300",
+  "progress.brain.title": "Brain training",
+  "progress.brain.weeklyCount": "Sessions this week: {{count}}",
   "progress.highlight.title": "Great start!",
   "progress.highlight.body": "You hit your goal this week. Keep the streak going.",
   "progress.section.recent": "Recent sessions",
